ingress-nginx/3tier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.sale.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myweb
            port:
              number: 80
  - host: www.purchase.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myweb2
            port:
              number: 80
